--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -701,6 +701,9 @@
     <ClCompile Include="Codeforces\700\730\734A.cpp">
       <Filter>Codeforces\700</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\200\260\268A.cpp">
+      <Filter>Codeforces\200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
