--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -704,6 +704,9 @@
     <ClCompile Include="Codeforces\200\260\268A.cpp">
       <Filter>Codeforces\200</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\1\20\25A.cpp">
+      <Filter>Codeforces\1</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
