--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -713,6 +713,9 @@
     <ClCompile Include="Codeforces\1\50\50A.cpp">
       <Filter>Codeforces\1</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\200\230\231A.cpp">
+      <Filter>Codeforces\200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
