--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -716,6 +716,9 @@
     <ClCompile Include="Codeforces\200\230\231A.cpp">
       <Filter>Codeforces\200</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\100\150\158B.cpp">
+      <Filter>Codeforces\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
