--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -719,6 +719,9 @@
     <ClCompile Include="Codeforces\100\150\158B.cpp">
       <Filter>Codeforces\100</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\200\260\266A.cpp">
+      <Filter>Codeforces\200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
