--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -722,6 +722,9 @@
     <ClCompile Include="Codeforces\200\260\266A.cpp">
       <Filter>Codeforces\200</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\200\260\263A.cpp">
+      <Filter>Codeforces\200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
