--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -725,6 +725,12 @@
     <ClCompile Include="Codeforces\200\260\263A.cpp">
       <Filter>Codeforces\200</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\300\310\318A.cpp">
+      <Filter>Codeforces\300</Filter>
+    </ClCompile>
+    <ClCompile Include="Codeforces\100\140\148A.cpp">
+      <Filter>Codeforces\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
