--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -731,6 +731,9 @@
     <ClCompile Include="Codeforces\100\140\148A.cpp">
       <Filter>Codeforces\100</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\1\60\61A.cpp">
+      <Filter>Codeforces\1</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
