--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -734,6 +734,9 @@
     <ClCompile Include="Codeforces\1\60\61A.cpp">
       <Filter>Codeforces\1</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\1\90\96A.cpp">
+      <Filter>Codeforces\1</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
