--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -737,6 +737,9 @@
     <ClCompile Include="Codeforces\1\90\96A.cpp">
       <Filter>Codeforces\1</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\100\140\144A.cpp">
+      <Filter>Codeforces\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
