--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -749,6 +749,9 @@
     <ClCompile Include="Codeforces\400\470\478A.cpp">
       <Filter>Codeforces\400</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\1\50\58A.cpp">
+      <Filter>Codeforces\1</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
