--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -752,6 +752,9 @@
     <ClCompile Include="Codeforces\1\50\58A.cpp">
       <Filter>Codeforces\1</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\200\230\236A.cpp">
+      <Filter>Codeforces\200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
