--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -755,6 +755,9 @@
     <ClCompile Include="Codeforces\200\230\236A.cpp">
       <Filter>Codeforces\200</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\500\540\546A.cpp">
+      <Filter>Codeforces\500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
