--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -761,6 +761,9 @@
     <ClCompile Include="Codeforces\100\150\155A.cpp">
       <Filter>Codeforces\100</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\100\110\119A.cpp">
+      <Filter>Codeforces\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
