--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -770,6 +770,15 @@
     <ClCompile Include="Codeforces\700\790\791A.cpp">
       <Filter>Codeforces\700</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\400\490\490A.cpp">
+      <Filter>Codeforces\400</Filter>
+    </ClCompile>
+    <ClCompile Include="Codeforces\500\570\579A.cpp">
+      <Filter>Codeforces\500</Filter>
+    </ClCompile>
+    <ClCompile Include="Codeforces\700\750\758A.cpp">
+      <Filter>Codeforces\700</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
