--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -782,6 +782,9 @@
     <ClCompile Include="Codeforces\200\260\268B.cpp">
       <Filter>Codeforces\200</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\500\500\509A.cpp">
+      <Filter>Codeforces\500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
