--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -791,6 +791,9 @@
     <ClCompile Include="UVa\600\673.cpp">
       <Filter>UVa\600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11100\11150.cpp">
+      <Filter>UVa\11100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
