--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -797,6 +797,9 @@
     <ClCompile Include="UVa\10000\10019.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\108.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
