--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -806,6 +806,9 @@
     <ClCompile Include="UVa\400\424.cpp">
       <Filter>UVa\400\420</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\400\485.cpp">
+      <Filter>UVa\400\480</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
@@ -997,6 +1000,9 @@
     </None>
     <None Include="UVa\400\424.py">
       <Filter>UVa\400\420</Filter>
+    </None>
+    <None Include="UVa\400\485.py">
+      <Filter>UVa\400\480</Filter>
     </None>
   </ItemGroup>
 </Project>
