--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -827,6 +827,9 @@
     <ClCompile Include="UVa\10100\10131.cpp">
       <Filter>UVa\10100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10003.cpp">
+      <Filter>UVa\10000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
