--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -830,6 +830,12 @@
     <ClCompile Include="UVa\10000\10003.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10018.cpp">
+      <Filter>UVa\10000</Filter>
+    </ClCompile>
+    <ClCompile Include="UVa\10200\10252.cpp">
+      <Filter>UVa\10200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
