--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -845,6 +845,9 @@
     <ClCompile Include="UVa\400\459.cpp">
       <Filter>UVa\400\450</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\500\514.cpp">
+      <Filter>UVa\500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
