--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -848,6 +848,9 @@
     <ClCompile Include="UVa\500\514.cpp">
       <Filter>UVa\500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10400\10499.cpp">
+      <Filter>UVa\10400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
