--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -851,6 +851,9 @@
     <ClCompile Include="UVa\10400\10499.cpp">
       <Filter>UVa\10400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\600\621.cpp">
+      <Filter>UVa\600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
