--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -854,6 +854,9 @@
     <ClCompile Include="UVa\600\621.cpp">
       <Filter>UVa\600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11100\11185.cpp">
+      <Filter>UVa\11100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
