--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -860,6 +860,12 @@
     <ClCompile Include="UVa\1200\1225.cpp">
       <Filter>UVa\1200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\160.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
+    <ClCompile Include="UVa\400\406.cpp">
+      <Filter>UVa\400\400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
