--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -866,6 +866,9 @@
     <ClCompile Include="UVa\400\406.cpp">
       <Filter>UVa\400\400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10127.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
