--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -869,6 +869,9 @@
     <ClCompile Include="UVa\10100\10127.cpp">
       <Filter>UVa\10100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10394.cpp">
+      <Filter>UVa\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
